Fixed the body not stretching across the viewport

--- a/styles/style.css
+++ b/styles/style.css
@@ -7,7 +7,8 @@
 body {
   display: flex;
   flex-direction: column;
-
+  justify-content: space-between;
+  height: 100vh;
   width: 100vw;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -50,6 +51,7 @@ body {
   gap: 20px;
   margin-right: 30px;
   font-size: 0.8rem;
+  width: 300px;
 }
 
 .pres-image {
@@ -58,7 +60,7 @@ body {
   justify-content: center;
   align-items: center;
   color: white;
-  padding: 40px 50px;
+  padding: 20px 50px;
   font-size: 0.9rem;
 }
 
@@ -83,6 +85,7 @@ button {
   display: flex;
   margin: auto 200px;
   margin-bottom: 40px;
+  gap: 26px;
 }
 
 .card {
@@ -91,6 +94,7 @@ button {
   align-items: center;
   justify-content: center;
   gap: 7px;
+  width: 101px;
 }
 
 .card-img {
@@ -102,6 +106,7 @@ button {
 
 .card-text {
   font-size: 10px;
+  text-align: center;
 }
 
 .quote-section {
